<resources>
  <string name="app_name">Budget Manager</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="login_failure">Unable to sign in with the provided credentials.</string>
  <string name="sign_out">Sign Out</string>
  <string name="name_of_transaction">Name</string>
  <string name="transaction_amount">Transaction Amount</string>
  <string name="transaction_name">Transaction Name</string>
  <string name="budget_category">Budget Category</string>
  <string name="amount">0.00</string>
  <string name="transaction_date">Date</string>
  <string name="transaction_note">Note</string>
</resources>
