<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:layout_margin="@dimen/full_margin"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:background="@color/gray">


    <com.google.android.material.textfield.TextInputLayout
      android:id="@id/transaction_name"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:hintEnabled="true"
      app:hintAnimationEnabled="true"
      android:layout_margin="@dimen/half_margin"
      android:layout_marginTop="@dimen/fill_space"
      app:layout_constraintTop_toTopOf="parent">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/transaction_name"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="text"
      android:maxLines="2"
      android:layout_margin="@dimen/half_margin"
      android:hint="@string/transaction_name"
      app:layout_constraintTop_toTopOf="parent"
      />
    </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/budget_category_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:hintEnabled="true"
    app:hintAnimationEnabled="true"
    android:layout_margin="@dimen/half_margin"
    app:layout_constraintTop_toBottomOf="@id/transaction_name">

    <AutoCompleteTextView
      android:id="@+id/budget_category"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="text"
      android:layout_margin="@dimen/half_margin"
      android:hint="@string/budget_category"/>

  </com.google.android.material.textfield.TextInputLayout>


  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/transaction_amount_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/half_margin"
    app:hintEnabled="true"
    app:hintAnimationEnabled="true"
    app:layout_constraintTop_toBottomOf="@id/budget_category_layout">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/transaction_amount"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="numberDecimal"
      android:layout_margin="@dimen/half_margin"
      android:hint="@string/amount"
      />
  </com.google.android.material.textfield.TextInputLayout>


  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/transaction_date_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/half_margin"
    app:hintEnabled="true"
    app:hintAnimationEnabled="true"
    app:layout_constraintTop_toBottomOf="@id/transaction_amount_layout">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/transaction_date"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/half_margin"
      android:inputType="date"
      android:hint="@string/transaction_date"

      />
  </com.google.android.material.textfield.TextInputLayout>


  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/transaction_note_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/half_margin"
    app:hintEnabled="true"
    app:hintAnimationEnabled="true"
    app:layout_constraintTop_toBottomOf="@id/transaction_date_layout">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/transaction_note"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/half_margin"
      android:inputType="textMultiLine"
      android:minLines="3"
      android:maxLines="6"
      android:hint="@string/transaction_note"
      app:layout_constraintTop_toBottomOf="@id/transaction_date_layout"

      />
  </com.google.android.material.textfield.TextInputLayout>




</androidx.constraintlayout.widget.ConstraintLayout>